Add intro video

--- a/html-app/index.html
+++ b/html-app/index.html
@@ -58,6 +58,9 @@
         </nav>
         <div id="content" class="flex-column">
             <div id="intro-container" class=" flex-column section center">
+                <video autoplay muted loop id="intro-video">
+                    <source src="./img/pexels-pavel-danilyuk-5495781.mp4" type="video/mp4">
+                </video>
                 <div id="intro" class="flex-column center">
                     <h1>Cody Uhi</h1>
                     <h3>Site Reliability Engineer, Full-Stack Software Engineer</h3>
@@ -481,14 +484,14 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="footer-container" class="flex-column section center">
-        <div id="footer" class="flex-column">
-            <div id="footer-links" class="flex-row"><a href="" class="link-text"><i class="fa fa-facebook"></i></a> <a href=""
-                    class="link-text"><i class="fa fa-instagram"></i></a> <a href="" class="link-text"><i
-                        class="fa fa-twitter"></i></a> <a href="" class="link-text"><i class="fa fa-linkedin"></i></a>
-                <a href="" class="link-text"><i class="fa fa-github"></i></a></div>
-            <p id="copyright">&copy; Cody Uhi 2021</p>
+        <div id="footer-container" class="flex-column section center">
+            <div id="footer" class="flex-column">
+                <div id="footer-links" class="flex-row"><a href="" class="link-text"><i class="fa fa-facebook"></i></a> <a href=""
+                        class="link-text"><i class="fa fa-instagram"></i></a> <a href="" class="link-text"><i
+                            class="fa fa-twitter"></i></a> <a href="" class="link-text"><i class="fa fa-linkedin"></i></a>
+                    <a href="" class="link-text"><i class="fa fa-github"></i></a></div>
+                <p id="copyright">&copy; Cody Uhi 2021</p>
+            </div>
         </div>
     </div>
 
